--- a/_posts/2014-07-01-dreams.markdown
+++ b/_posts/2014-07-01-dreams.markdown
@@ -1,6 +1,7 @@
 ---
 layout:     post
 title:      "The dreams of yesterday are the hopes of today and the reality of tomorrow."
+tags: "python"
 date:       2014-07-01 12:00:00
 author:     "Start Bootstrap"
 header-img: "img/post-bg-02.jpg"
